# Zettel

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  PLAN.md  PRIVACY.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  zugferd_validation.yml
.github/workflows/: build.yml  test.yml
docs/: auto-update-setup.md  datev-export-sample.csv  datev-export.md  v0.3.1-storno-validation.md  v0.4-qa-report.md
docs/screenshots/: README.md
sidecar/: README.md  build.py  main.py  pyproject.toml  requirements.txt  test-payload.json  zettel-sidecar.spec
sidecar/bank/: __init__.py  camt.py  mt940.py
sidecar/invoice/: extract.py  i18n.py  pdf.py  qr.py  templates.py  text_extract.py  zugferd.py
sidecar/templates/: invoice.css  invoice.html.j2  offer.html.j2  reminder.html.j2  zugferd-en16931.xml.j2
sidecar/test-payloads/: 01-standard-19.json  02-mixed-vat.json  03-five-positions.json  04-ku-with-vatid.json  05-reverse-charge.json  06-basic.json  07-extended.json
sidecar/tests/: conftest.py  test_end_to_end.py  test_epc_qr.py  test_i18n.py  test_line_period.py  test_missing_fields.py  test_validator_golden.py  test_zugferd_xml.py
sidecar/tests/goldens/: 01-standard-19.xml  02-mixed-vat.xml  03-five-positions.xml  04-ku-with-vatid.xml  05-reverse-charge.xml  06-basic.xml  07-extended.xml
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.bundle.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: accent.rs  attachments.rs  backup.rs  bmf.rs  crypto.rs  exchange.rs  fs_export.rs  lib.rs  main.rs  sandbox.rs  sidecar.rs  tenants.rs  validator.rs
src/lib/: accent.svelte.ts  theme.svelte.ts  updater.ts  utils.ts  validator.ts  window.ts
src/lib/bank/: match.ts
src/lib/components/: BarChart.svelte  Layout.svelte  (+5 more)
src/routes/: BankImport.svelte  CatalogEdit.svelte  CatalogList.svelte  CustomerEdit.svelte  CustomersList.svelte  Dashboard.svelte  ExpenseEdit.svelte  ExpensesList.svelte  Export.svelte  InvoiceDetail.svelte  InvoiceEdit.svelte  InvoicesList.svelte  NotFound.svelte  OfferDetail.svelte  OfferEdit.svelte  OffersList.svelte  RecurringEdit.svelte  RecurringList.svelte  ReminderEdit.svelte  RemindersList.svelte  Settings.svelte  TaxReport.svelte  UstvaReport.svelte  Validate.svelte  VendorEdit.svelte  VendorsList.svelte
tools/: build-jre.sh  download-validator.sh
(+108 files in other folders)
