[project]
name = "zettel-sidecar"
version = "0.1.0"
description = "Zettel invoice PDF generator (WeasyPrint sidecar)"
requires-python = ">=3.12"
dependencies = [
    "weasyprint==65.1",
    "Jinja2==3.1.4",
    "factur-x==3.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
