[package]
name = "zettel"
version = "0.7.0"
description = "Zettel — Offline-first invoice generator"
authors = ["Jonas Laux"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "zettel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2"
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = "1.7"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
